--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "Babel plugin for lodash",
   "main": "lib/index.js",
   "files": [
-    "lib",
-    "src",
-    "test"
+    "lib"
   ],
   "scripts": {
     "build": "tsc",
